--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 </div>
             </div>
             <div class="list_planosdesaude">
-
+                <div>
+                    Trabalhamos com:
+                </div>
                 <ul>
                     <li>Assim</li>
                     <li>Sulamerica</li>
