--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="list_planosdesaude">
-                <div>
+                <div class="title_listplanosdesaude">
                     Trabalhamos com:
                 </div>
                 <ul>
