style and index

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
         <div class="planos_de_saude">
             <div class="title_description_planodesaude">
                 <h1>PLANOS DE SAÚDE</h1>   
-                <div class="description_planosdesaude">   
+            <div class="description_planosdesaude">   
                     <p>Você e sua família merecem qualidade de vida. Cotamos Planos Individuais e Empresariais.</p>
-                </div>
             </div>
-            <div class="list_planosdesaude">
+            </div>
+            <div class="list_containerplanosdesaude">
                 <div class="title_listplanosdesaude">
                     Trabalhamos com:
                 </div>
-                <ul>
+                <ul class="list_planos">
                     <li>Assim</li>
                     <li>Sulamerica</li>
                     <li>PreventSênior</li>
@@ -65,10 +65,17 @@
                 
             </div>
         </div>
-
-        <h1>PLANOS ODONTOLÓGICOS</h1>
+        <div class="title_description_planodesaude">
+            <h1>PLANOS ODONTOLÓGICOS</h1>
+        </div>
+        <div class="description_planosdesaude">
             <p>Seu sorriso merece o melhor cuidado, e estamos aqui para proporcionar isso a você.</p>
-            <ul>
+        </div>
+        <div>
+            <div class="title_listplanosdesaude">
+                Trabalhamos com:
+            </div>
+            <ul class="list_planos">
                 <li>+ Dental</li>
                 <li>Amil</li>
                 <li>Bradesco Dental</li>
@@ -76,25 +83,31 @@
                 <li>Outros...</li>
 
             </ul>
-
-        <h1>SOBRE MIM</h1>
-            <p>Olá, sou Ana Maria Trindade, uma profissional dedicada ao universo dos planos de saúde há duas décadas. Minha jornada 
-                <br> nesse setor foi marcada por uma paixão incessante por proporcionar cuidados de saúde acessíveis e abrangentes a todos.
-                <br> 
-                Ao longo dos anos, adquiri um profundo entendimento das necessidades individuais de saúde e da importância de oferecer 
-                <br> soluções personalizadas. Minha missão é guiar você na escolha do plano de saúde ideal, assegurando que suas 
-                <br> preocupações com a saúde estejam sempre em boas mãos.
-                <br> 
-                Acredito firmemente que a saúde é o nosso bem mais precioso, e minha abordagem é pautada pela transparência, confiança 
-                <br> e compromisso com o bem-estar dos meus clientes. Ao escolher-me como sua consultora de planos de saúde, você está 
-                <br> optando por uma parceria que vai além do simples contrato; é um compromisso com sua saúde e tranquilidade.
-                <br> 
-                Vamos juntos construir um caminho seguro em direção a uma vida mais saudável e protegida. Conte comigo para transformar
-                <br>  o cuidado com a saúde em uma jornada descomplicada e personalizada.
-                </p>
-        <h1>CONTATO</h1>
-            <p>Telefone: (21) 970206606</p>
-            <p>Email: anamariatrindade65@gmail.com</p>
+        </div>
+        <div class="content_sobremim">
+            <h1>SOBRE MIM</h1>
+                <p>Olá, sou Ana Maria Trindade, uma profissional dedicada ao universo dos planos de saúde há duas décadas. Minha jornada 
+                    <br> nesse setor foi marcada por uma paixão incessante por proporcionar cuidados de saúde acessíveis e abrangentes a todos.
+                    <br> 
+                    Ao longo dos anos, adquiri um profundo entendimento das necessidades individuais de saúde e da importância de oferecer 
+                    <br> soluções personalizadas. Minha missão é guiar você na escolha do plano de saúde ideal, assegurando que suas 
+                    <br> preocupações com a saúde estejam sempre em boas mãos.
+                    <br> 
+                    Acredito firmemente que a saúde é o nosso bem mais precioso, e minha abordagem é pautada pela transparência, confiança 
+                    <br> e compromisso com o bem-estar dos meus clientes. Ao escolher-me como sua consultora de planos de saúde, você está 
+                    <br> optando por uma parceria que vai além do simples contrato; é um compromisso com sua saúde e tranquilidade.
+                    <br> 
+                    Vamos juntos construir um caminho seguro em direção a uma vida mais saudável e protegida. Conte comigo para transformar
+                    <br>  o cuidado com a saúde em uma jornada descomplicada e personalizada.
+                    </p>
+        </div>
+        <div class="title_description_planodesaude">
+            <h1>CONTATO</h1>
+            <div class="content_contato">
+                <p>Telefone: (21) 970206606</p>
+                <p>Email: anamariatrindade65@gmail.com</p>
+            </div>
+        </div>
     </div>
 </div>
 </body>
