New image and index and sty

--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
         <div class="planos_de_saude">
             <div class="title_description_planodesaude">
                 <h1>PLANOS DE SAÚDE</h1>   
+            </div>
             <div class="description_planosdesaude">   
                     <p>Você e sua família merecem qualidade de vida. Cotamos Planos Individuais e Empresariais.</p>
             </div>
-            </div>
             <div class="list_containerplanosdesaude">
+            <div>
+                <img src="planosaude1.png" alt="Plano de Saúde Sulamerica">
+                <img src="planosaude2.png" alt="Plano de Saúde Leve Saúde">
+                <img src="planosaude3.png" alt="Plano de Saúde Amil">
+                <img src="planosaude4.png" alt="Plano de Saúde Assim">
+            </div>
                 <div class="title_listplanosdesaude">
                     Trabalhamos com:
                 </div>
