new images style and index

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
             <div class="description_planosdesaude">   
                     <p>Você e sua família merecem qualidade de vida. Cotamos Planos Individuais e Empresariais.</p>
             </div>
-            <div class="list_containerplanosdesaude">
             <div>
                 <img src="planosaude1.png" alt="Plano de Saúde Sulamerica">
                 <img src="planosaude2.png" alt="Plano de Saúde Leve Saúde">
@@ -68,14 +67,19 @@
                     <li>Golden Cross</li>
                     <li>Outros..</li>
                 </ul>
-                
-            </div>
+
         </div>
         <div class="title_description_planodesaude">
             <h1>PLANOS ODONTOLÓGICOS</h1>
         </div>
         <div class="description_planosdesaude">
             <p>Seu sorriso merece o melhor cuidado, e estamos aqui para proporcionar isso a você.</p>
+        </div>
+        <div>
+            <img src="planoodonto1.png" alt="">
+            <img src="planoodonto2.png" alt="">
+            <img src="planoodonto3.png" alt="">
+            <img src="planoodonto4.png" alt="">
         </div>
         <div>
             <div class="title_listplanosdesaude">
@@ -91,21 +95,26 @@
             </ul>
         </div>
         <div class="content_sobremim">
-            <h1>SOBRE MIM</h1>
-                <p>Olá, sou Ana Maria Trindade, uma profissional dedicada ao universo dos planos de saúde há duas décadas. Minha jornada 
-                    <br> nesse setor foi marcada por uma paixão incessante por proporcionar cuidados de saúde acessíveis e abrangentes a todos.
-                    <br> 
-                    Ao longo dos anos, adquiri um profundo entendimento das necessidades individuais de saúde e da importância de oferecer 
-                    <br> soluções personalizadas. Minha missão é guiar você na escolha do plano de saúde ideal, assegurando que suas 
-                    <br> preocupações com a saúde estejam sempre em boas mãos.
-                    <br> 
-                    Acredito firmemente que a saúde é o nosso bem mais precioso, e minha abordagem é pautada pela transparência, confiança 
-                    <br> e compromisso com o bem-estar dos meus clientes. Ao escolher-me como sua consultora de planos de saúde, você está 
-                    <br> optando por uma parceria que vai além do simples contrato; é um compromisso com sua saúde e tranquilidade.
-                    <br> 
-                    Vamos juntos construir um caminho seguro em direção a uma vida mais saudável e protegida. Conte comigo para transformar
-                    <br>  o cuidado com a saúde em uma jornada descomplicada e personalizada.
-                    </p>
+            <div class="text_sobremim">
+                <h1>SOBRE MIM</h1>
+                    <p>Olá, sou Ana Maria Trindade, uma profissional dedicada ao universo dos planos de saúde há duas décadas. Minha jornada 
+                        <br> nesse setor foi marcada por uma paixão incessante por proporcionar cuidados de saúde acessíveis e abrangentes a todos.
+                        <br> 
+                        Ao longo dos anos, adquiri um profundo entendimento das necessidades individuais de saúde e da importância de oferecer 
+                        <br> soluções personalizadas. Minha missão é guiar você na escolha do plano de saúde ideal, assegurando que suas 
+                        <br> preocupações com a saúde estejam sempre em boas mãos.
+                        <br> 
+                        Acredito firmemente que a saúde é o nosso bem mais precioso, e minha abordagem é pautada pela transparência, confiança 
+                        <br> e compromisso com o bem-estar dos meus clientes. Ao escolher-me como sua consultora de planos de saúde, você está 
+                        <br> optando por uma parceria que vai além do simples contrato; é um compromisso com sua saúde e tranquilidade.
+                        <br> 
+                        Vamos juntos construir um caminho seguro em direção a uma vida mais saudável e protegida. Conte comigo para transformar
+                        <br>  o cuidado com a saúde em uma jornada descomplicada e personalizada.
+                        </p>
+            </div>
+            <div class="image_sobremim">
+                <img src="fotosobremim.png" alt="">
+            </div>
         </div>
         <div class="title_description_planodesaude">
             <h1>CONTATO</h1>
