images and spaces

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 <title>Ana Trindade</title>
 </head>
@@ -46,12 +49,13 @@
             <div class="description_planosdesaude">   
                     <p>Você e sua família merecem qualidade de vida. Cotamos Planos Individuais e Empresariais.</p>
             </div>
-            <div>
+            <div class="images_planos">
                 <img src="planosaude1.png" alt="Plano de Saúde Sulamerica">
                 <img src="planosaude2.png" alt="Plano de Saúde Leve Saúde">
                 <img src="planosaude3.png" alt="Plano de Saúde Amil">
                 <img src="planosaude4.png" alt="Plano de Saúde Assim">
             </div>
+            <div class="content_listplanos">
                 <div class="title_listplanosdesaude">
                     Trabalhamos com:
                 </div>
@@ -67,32 +71,34 @@
                     <li>Golden Cross</li>
                     <li>Outros..</li>
                 </ul>
-
-        </div>
-        <div class="title_description_planodesaude">
-            <h1>PLANOS ODONTOLÓGICOS</h1>
-        </div>
-        <div class="description_planosdesaude">
-            <p>Seu sorriso merece o melhor cuidado, e estamos aqui para proporcionar isso a você.</p>
-        </div>
-        <div>
-            <img src="planoodonto1.png" alt="">
-            <img src="planoodonto2.png" alt="">
-            <img src="planoodonto3.png" alt="">
-            <img src="planoodonto4.png" alt="">
-        </div>
-        <div>
-            <div class="title_listplanosdesaude">
-                Trabalhamos com:
             </div>
-            <ul class="list_planos">
-                <li>+ Dental</li>
-                <li>Amil</li>
-                <li>Bradesco Dental</li>
-                <li>Odontoprev</li>
-                <li>Outros...</li>
+        </div>
+        <div class="planos_de_saude">
+            <div class="title_description_planodesaude">
+                <h1>PLANOS ODONTOLÓGICOS</h1>
+            </div>
+            <div class="description_planosdesaude">
+                <p>Seu sorriso merece o melhor cuidado, e estamos aqui para proporcionar isso a você.</p>
+            </div>
+            <div class="images_planos">
+                <img src="planoodonto1.png" alt="">
+                <img src="planoodonto2.png" alt="">
+                <img src="planoodonto3.png" alt="">
+                <img src="planoodonto4.png" alt="">
+            </div>
+            <div class="content_listplanos">
+                <div class="title_listplanosdesaude">
+                    Trabalhamos com:
+                </div>
+                <ul class="list_planos">
+                    <li>+ Dental</li>
+                    <li>Amil</li>
+                    <li>Bradesco Dental</li>
+                    <li>Odontoprev</li>
+                    <li>Outros...</li>
 
-            </ul>
+                </ul>
+            </div>
         </div>
         <div class="content_sobremim">
             <div class="text_sobremim">
