--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
     </div>
     
     <div class="body_content">
+
+        <div class="content_whatsapp">
+            <img src="Ellipse 1.png" alt="">
+        </div>
+
         <div class="planos_de_saude">
             <div class="title_description_planodesaude">
                 <h1>PLANOS DE SAÚDE</h1>   
@@ -100,30 +105,34 @@
                 </ul>
             </div>
         </div>
-        <div class="content_sobremim">
+        <div class="container_sobremim">
             <div class="text_sobremim">
-                <h1>SOBRE MIM</h1>
-                    <p>Olá, sou Ana Maria Trindade, uma profissional dedicada ao universo dos planos de saúde há duas décadas. Minha jornada 
-                        <br> nesse setor foi marcada por uma paixão incessante por proporcionar cuidados de saúde acessíveis e abrangentes a todos.
-                        <br> 
-                        Ao longo dos anos, adquiri um profundo entendimento das necessidades individuais de saúde e da importância de oferecer 
-                        <br> soluções personalizadas. Minha missão é guiar você na escolha do plano de saúde ideal, assegurando que suas 
-                        <br> preocupações com a saúde estejam sempre em boas mãos.
-                        <br> 
-                        Acredito firmemente que a saúde é o nosso bem mais precioso, e minha abordagem é pautada pela transparência, confiança 
-                        <br> e compromisso com o bem-estar dos meus clientes. Ao escolher-me como sua consultora de planos de saúde, você está 
-                        <br> optando por uma parceria que vai além do simples contrato; é um compromisso com sua saúde e tranquilidade.
-                        <br> 
-                        Vamos juntos construir um caminho seguro em direção a uma vida mais saudável e protegida. Conte comigo para transformar
-                        <br>  o cuidado com a saúde em uma jornada descomplicada e personalizada.
-                        </p>
+                <div class="title_sobremim">
+                    <h1>SOBRE MIM</h1>
+                </div>
+                <div class="content_sobremim">
+                    <p>
+                        Olá, sou Ana Maria Trindade, uma profissional dedicada ao universo dos planos de saúde há duas décadas. Minha jornada  nesse setor foi marcada por uma paixão incessante por proporcionar cuidados de saúde acessíveis e abrangentes a todos.
+                    </p> 
+                    <p>
+                        Ao longo dos anos, adquiri um profundo entendimento das necessidades individuais de saúde e da importância de oferecer soluções personalizadas. Minha missão é guiar você na escolha do plano de saúde ideal, assegurando que suas preocupações com a saúde estejam sempre em boas mãos.
+                    </p>                        
+                    <p>
+                        Acredito firmemente que a saúde é o nosso bem mais precioso, e minha abordagem é pautada pela transparência, confiança e compromisso com o bem-estar dos meus clientes. Ao escolher-me como sua consultora de planos de saúde, você está optando por uma parceria que vai além do simples contrato; é um compromisso com sua saúde e tranquilidade.
+                    </p>
+                    <p>
+                        Vamos juntos construir um caminho seguro em direção a uma vida mais saudável e protegida. Conte comigo para transformar o cuidado com a saúde em uma jornada descomplicada e personalizada.
+                    </p>
+                </div>
             </div>
             <div class="image_sobremim">
                 <img src="fotosobremim.png" alt="">
             </div>
         </div>
-        <div class="title_description_planodesaude">
-            <h1>CONTATO</h1>
+        <div class="container_contato">
+            <div class="title_description_planodesaude">
+                <h1>CONTATO</h1>
+            </div>
             <div class="content_contato">
                 <p>Telefone: (21) 970206606</p>
                 <p>Email: anamariatrindade65@gmail.com</p>
@@ -132,4 +141,9 @@
     </div>
 </div>
 </body>
+<footer>
+    <div class="content_footer">
+        feito por Nicole Trindade
+    </div>
+</footer>
 </html>
