button wpp e style

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
     <div class="body_content">
 
-        <div class="content_whatsapp">
+        <div class="button_whatsapp" onclick="location.href='https://wa.me//5521970206606?text=Olá!%20Tenho%20interesse%20em%20cotar%20um%20plano'" id="myBtn" title="Cote seu Plano">
             <img src="Ellipse 1.png" alt="">
         </div>
 
@@ -146,4 +146,5 @@
         feito por Nicole Trindade
     </div>
 </footer>
+<script src="script.js"></script>
 </html>
