button cotar index style

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="banner_principal">
-        <div class="button_cotarplano">
+        <div class="button_cotarplano" onclick="location.href='https://wa.me//5521970206606?text=Olá!%20Tenho%20interesse%20em%20cotar%20um%20plano'" title="Cote seu Plano">
             <h1>QUERO COTAR UM PLANO</h1>
         </div>
         
