--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     <p>Você e sua família merecem qualidade de vida. Cotamos Planos Individuais e Empresariais.</p>
             </div>
             <div class="images_planos">
-                <img src="planosaude1.png" alt="Plano de Saúde Sulamerica">
-                <img src="planosaude2.png" alt="Plano de Saúde Leve Saúde">
-                <img src="planosaude3.png" alt="Plano de Saúde Amil">
-                <img src="planosaude4.png" alt="Plano de Saúde Assim">
+                <img class="images_planossize" src="planosaude1.png" alt="Plano de Saúde Sulamerica">
+                <img class="images_planossize" src="planosaude2.png" alt="Plano de Saúde Leve Saúde">
+                <img class="images_planossize" src="planosaude3.png" alt="Plano de Saúde Amil">
+                <img class="images_planossize" src="planosaude4.png" alt="Plano de Saúde Assim">
             </div>
             <div class="content_listplanos">
                 <div class="title_listplanosdesaude">
@@ -87,10 +87,10 @@
                 <p>Seu sorriso merece o melhor cuidado, e estamos aqui para proporcionar isso a você.</p>
             </div>
             <div class="images_planos">
-                <img src="planoodonto1.png" alt="">
-                <img src="planoodonto2.png" alt="">
-                <img src="planoodonto3.png" alt="">
-                <img src="planoodonto4.png" alt="">
+                <img class="images_planossize" src="planoodonto1.png" alt="">
+                <img class="images_planossize" src="planoodonto2.png" alt="">
+                <img class="images_planossize" src="planoodonto3.png" alt="">
+                <img class="images_planossize" src="planoodonto4.png" alt="">
             </div>
             <div class="content_listplanos">
                 <div class="title_listplanosdesaude">
