--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="image_sobremim">
-                <img src="fotosobremim.png" alt="">
+                <img class="image_sobremim1" src="fotosobremim.png" alt="">
             </div>
         </div>
         <div class="container_contato">
