--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             <div class="image_sobremim">
                 <img class="image_sobremim1" src="fotosobremim.png" alt="">
             </div>
+            <div class="title_sobremim2"> SOBRE MIM </div>
         </div>
         <div class="container_contato">
             <div class="title_description_planodesaude">
