--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <h1 class="logo_anatrindade"> ANA TRINDADE</h1>
             <H2 class="logo_corretoradeplanos">CORRETORA DE PLANOS</H2>
         </div>
-
+        <div class="icone_menu">
+            <img src="iconemenu.svg" alt="Menu">
+        </div>
         <div class="menu_superior">
             <ul class="conteudo_menu">
                 <li>PLANOS DE SAÚDE</li>
