--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </div>
         <div class="menu_superior">
             <ul class="conteudo_menu">
-                <li>PLANOS DE SAÚDE</li>
-                <li>PLANOS ODONTOLÓGICOS</li>
-                <li>SOBRE MIM</li>
-                <li>CONTATO</li>
+                <li><a href="#planosdesaude" class="text_menudec" >PLANOS DE SAÚDE</a></li>
+                <li><a href="#planosodontologicos" class="text_menudec">PLANOS ODONTOLÓGICOS</a></li>
+                <li><a href="#sobremim" class="text_menudec">SOBRE MIM</a></li>
+                <li><a href="#contato" class="text_menudec">CONTATO</a></li>
             </ul>
         </div>
     </div>
@@ -50,7 +50,8 @@
             <img src="Ellipse 1.png" alt="">
         </div>
 
-        <div class="planos_de_saude">
+        <section id="planosdesaude">
+        <div class="planos_de_saude">    
             <div class="title_description_planodesaude">
                 <h1>PLANOS DE SAÚDE</h1>   
             </div>
@@ -81,6 +82,8 @@
                 </ul>
             </div>
         </div>
+        </section>
+        <section id="planosodontologicos">
         <div class="planos_de_saude">
             <div class="title_description_planodesaude">
                 <h1>PLANOS ODONTOLÓGICOS</h1>
@@ -108,6 +111,8 @@
                 </ul>
             </div>
         </div>
+        </section>
+        <section id="sobremim">
         <div class="container_sobremim">
             <div class="text_sobremim">
                 <div class="title_sobremim">
@@ -133,6 +138,8 @@
             </div>
             <div class="title_sobremim2"> SOBRE MIM </div>
         </div>
+        </section>
+        <section id="contato">
         <div class="container_contato">
             <div class="title_description_planodesaude">
                 <h1>CONTATO</h1>
@@ -142,6 +149,7 @@
                 <p>Email: anamariatrindade65@gmail.com</p>
             </div>
         </div>
+        </section>
     </div>
 </div>
 </body>
