style flow animation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 class="logo_anatrindade"> ANA TRINDADE</h1>
             <H2 class="logo_corretoradeplanos">CORRETORA DE PLANOS</H2>
         </div>
-        <div class="icone_menu">
+        <div class="icone_menu" onclick="toggleMenu()">
             <img src="iconemenu.svg" alt="Menu">
         </div>
         <div class="menu_superior">
