--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="body_content">
 
         <div class="button_whatsapp" onclick="location.href='https://wa.me//5521970206606?text=Olá!%20Tenho%20interesse%20em%20cotar%20um%20plano'" id="myBtn" title="Cote seu Plano">
-            <img src="Ellipse 1.png" alt="">
+            <img class="button_hoverclass" src="Ellipse 1.png" alt="">
         </div>
 
         <section id="planosdesaude">
