--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                     <p>Você e sua família merecem qualidade de vida. Cotamos Planos Individuais e Empresariais.</p>
             </div>
             <div class="images_planos">
-                <img class="images_planossize" src="planosaude1.png" alt="Plano de Saúde Sulamerica">
-                <img class="images_planossize" src="planosaude2.png" alt="Plano de Saúde Leve Saúde">
-                <img class="images_planossize" src="planosaude3.png" alt="Plano de Saúde Amil">
-                <img class="images_planossize" src="planosaude4.png" alt="Plano de Saúde Assim">
+                <img class="images_planossize" src="images/planosaude1.png" alt="Plano de Saúde Sulamerica">
+                <img class="images_planossize" src="images/planosaude2.png" alt="Plano de Saúde Leve Saúde">
+                <img class="images_planossize" src="images/planosaude3.png" alt="Plano de Saúde Amil">
+                <img class="images_planossize" src="images/planosaude4.png" alt="Plano de Saúde Assim">
             </div>
             <div class="content_listplanos">
                 <div class="title_listplanosdesaude">
@@ -92,10 +92,10 @@
                 <p>Seu sorriso merece o melhor cuidado, e estamos aqui para proporcionar isso a você.</p>
             </div>
             <div class="images_planos">
-                <img class="images_planossize" src="planoodonto1.png" alt="">
-                <img class="images_planossize" src="planoodonto2.png" alt="">
-                <img class="images_planossize" src="planoodonto3.png" alt="">
-                <img class="images_planossize" src="planoodonto4.png" alt="">
+                <img class="images_planossize" src="images/planoodonto1.png" alt="">
+                <img class="images_planossize" src="images/planoodonto2.png" alt="">
+                <img class="images_planossize" src="images/planoodonto3.png" alt="">
+                <img class="images_planossize" src="images/planoodonto4.png" alt="">
             </div>
             <div class="content_listplanos">
                 <div class="title_listplanosdesaude">
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <div class="image_sobremim">
-                <img class="image_sobremim1" src="fotosobremim.png" alt="">
+                <img class="image_sobremim1" src="images/fotosobremim.png" alt="">
             </div>
             <div class="title_sobremim2"> SOBRE MIM </div>
         </div>
