--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <H2 class="logo_corretoradeplanos">CORRETORA DE PLANOS</H2>
         </div>
         <div class="icone_menu" onclick="toggleMenu()">
-            <img src="iconemenu.svg" alt="Menu">
+            <img src="images/iconemenu.svg" alt="Menu">
         </div>
         <div class="menu_superior">
             <ul class="conteudo_menu">
