--- a/index.html
+++ b/index.html
@@ -159,4 +159,8 @@
     </div>
 </footer>
 <script src="script.js"></script>
+<script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+ <script defer src="/_vercel/insights/script.js"></script>
 </html>
